# SCORE

./: .gitignore  CMakeLists.txt  README.md  README.txt
docs/: .directory  Makefile  docutils.conf  make.bat  my.css
docs/images/: .directory  SCORELogo.psd
docs/scratch/: contact.rst  licence.rst  references.rst
docs/source/: .directory  conf.py  index.rst  openmp.rst  score2pview.rst  theoutput.rst  workedexample.rst
example/jmak/: .directory  SCORE.1.3DRawData.tar  SCORE.1.MyRank.0.JobID.0.RXFrontStats.csv  SCORE.1.MyRank.0.JobID.0.SingleGrainData.csv  SCORE.1.ParaviewHowTo.tar  SCORE.1.ProfilingLog.csv  SCORE.1.Rediscretized.FinalGSD.csv  SCORE.1.Rediscretized.Kinetics.csv  SCORE.1.Rediscretized.Macrotexture.csv  SCORE.1.StdOut.txt  SCORE.Input.TemplateIron.uds
msmse2019/: SCORE.Debug.MartinDiehl.64.SimID.6403.uds  SCORE.Debug.MartinDiehl.66.SimID.6665.uds  SCORE.Debug.MartinDiehl.66.SimID.6666.uds  pack_score_diehl_mmm2018_febr2019.sh  queue_score_diehl_mmm2018_febr2019_6403.sh  queue_score_diehl_mmm2018_febr2019_64030.sh  queue_score_diehl_mmm2018_febr2019_64031.sh  queue_score_diehl_mmm2018_febr2019_64032.sh  queue_score_diehl_mmm2018_febr2019_64033.sh  queue_score_diehl_mmm2018_febr2019_64034.sh  queue_score_diehl_mmm2018_febr2019_64035.sh  queue_score_diehl_mmm2018_febr2019_6665.sh  queue_score_diehl_mmm2018_febr2019_6666.sh  queue_score_diehl_mmm2018_febr2019_66660.sh  queue_score_diehl_mmm2018_febr2019_66661.sh  queue_score_diehl_mmm2018_febr2019_66662.sh  queue_score_diehl_mmm2018_febr2019_66663.sh  queue_score_diehl_mmm2018_febr2019_66664.sh  queue_score_diehl_mmm2018_febr2019_66665.sh
scripts/: .directory  GenerateInputFile_01.m  MakefileVAMPIR  extract_finalgsd_descrstats_01.pl  extract_rxfrontstats_integral_itersv_01.pl  plot_finalgsd_against_extendedripk3_01.pl
src/: .directory  SCORE_Definitions.cpp  SCORE_Definitions.h  SCORE_Defs_Functionality.h  SCORE_Defs_Physics.h  SCORE_EBSDImporting.cpp  SCORE_GeneralPhysics.cpp  SCORE_GrainBoundaryPhysics.cpp  SCORE_GridPartitioning.cpp  SCORE_GrowthMachine.cpp  SCORE_Io.cpp  SCORE_Io.h  SCORE_Io_Characterization.cpp  SCORE_Io_HDF5.cpp  SCORE_JunctionHdl.cpp  SCORE_Kernel.cpp  SCORE_Kernel.h  SCORE_MPIIOTypes.h  SCORE_Main.cpp  SCORE_Main.h  SCORE_Math.cpp  SCORE_Math.h  SCORE_NucleationModels.cpp  SCORE_OnTheFlyCharacterization.cpp  SCORE_OrientationHdl.cpp  SCORE_PercAnalyzer.cpp  SCORE_PercAnalyzer.h  SCORE_Profiling.h  SCORE_Random.cpp  SCORE_Random.h  SCORE_Random_PhDMK.cpp  SCORE_Random_PhDMK.h  SCORE_RecoveryModels.cpp  SCORE_SolitaryUnitAveraging.cpp  SCORE_StructureSynthesis.cpp  lodepng.cpp
